--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header>
       <div class="badge">한지 · 종이 계산</div>
       <h1>한지 계산기 (중량 ↔ 평량 ↔ 몬메)</h1>
-      <p class="sub">세 모드를 탭으로 분리. mm·cm만 지원, <b>항상 1장 기준</b> 계산.</p>
+      <p class="sub">세 모드를 탭으로 분리. mm·cm만 지원, 항상 <b>1장 기준</b> 계산.</p>
     </header>
 
     <div class="tabs" role="tablist" aria-label="계산 모드">
@@ -264,3 +264,4 @@
   </script>
 </body>
 </html>
+
