--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header>
       <div class="badge">한지 · 종이 계산</div>
       <h1>한지 계산기 (중량 ↔ 평량 ↔ 몬메)</h1>
-      <p class="sub">세 모드를 탭으로 분리. mm·cm만 지원, 항상 <b>1장 기준</b> 계산.</p>
+      <p class="sub">세 탭으로 분리. mm·cm만 지원, 항상 <b>1장 기준</b> 계산.</p>
     </header>
 
     <div class="tabs" role="tablist" aria-label="계산 모드">
@@ -54,7 +54,7 @@
 
     <!-- 탭 1: 중량 -> 평량 -->
     <section id="panel-w2gsm" class="card" role="tabpanel" aria-labelledby="tab-w2gsm">
-      <h2 style="margin:0 0 8px">한지 중량(g) → 한지 평량(g/m²)</h2>
+      <h2 style="margin:0 0 8px">한지 중량(g) → 평량(g/m²)</h2>
       <div class="grid grid-2">
         <div>
           <label for="w1">가로 길이</label>
@@ -93,7 +93,7 @@
 
     <!-- 탭 2: 평량 -> 중량 -->
     <section id="panel-gsm2w" class="card" role="tabpanel" aria-labelledby="tab-gsm2w" style="display:none">
-      <h2 style="margin:0 0 8px">한지 평량(g/m²) → 한지 중량(g)</h2>
+      <h2 style="margin:0 0 8px">한지 평량(g/m²) → 중량(g)</h2>
       <div class="grid grid-2">
         <div>
           <label for="w2">가로 길이</label>
@@ -132,7 +132,7 @@
 
     <!-- 탭 3: 몬메 -> 평량 -->
     <section id="panel-monme2gsm" class="card" role="tabpanel" aria-labelledby="tab-monme2gsm" style="display:none">
-      <h2 style="margin:0 0 8px">한지 몬메(돈) → 한지 평량(g/m²)</h2>
+      <h2 style="margin:0 0 8px">한지 몬메(돈) → 평량(g/m²)</h2>
       <div class="grid grid-2">
         <div>
           <label for="w3">가로 길이</label>
@@ -264,4 +264,5 @@
   </script>
 </body>
 </html>
+
 
