--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     </header>
 
     <div class="tabs" role="tablist" aria-label="계산 모드">
-      <div id="tab-w2gsm" class="tab active" role="tab" aria-controls="panel-w2gsm" aria-selected="true">한지 중량(g) → 평량(g/m²)</div>
-      <div id="tab-gsm2w" class="tab" role="tab" aria-controls="panel-gsm2w" aria-selected="false">한지 평량(g/m²) → 중량(g)</div>
-      <div id="tab-monme2gsm" class="tab" role="tab" aria-controls="panel-monme2gsm" aria-selected="false">한지 몬메(돈) → 평량(g/m²)</div>
+      <div id="tab-w2gsm" class="tab active" role="tab" aria-controls="panel-w2gsm" aria-selected="true">중량(g) → 평량(g/m²)</div>
+      <div id="tab-gsm2w" class="tab" role="tab" aria-controls="panel-gsm2w" aria-selected="false">평량(g/m²) → 중량(g)</div>
+      <div id="tab-monme2gsm" class="tab" role="tab" aria-controls="panel-monme2gsm" aria-selected="false">몬메(돈) → 평량(g/m²)</div>
     </div>
 
     <!-- 탭 1: 중량 -> 평량 -->
@@ -293,3 +293,4 @@
   </script>
 </body>
 </html>
+
