--- a/index.html
+++ b/index.html
@@ -72,11 +72,17 @@
       <p class="sub">세 탭으로 분리. mm·cm만 지원, 항상 <b>1장 기준</b> 계산.</p>
     </header>
 
-    <div class="tabs" role="tablist" aria-label="계산 모드">
-      <div id="tab-w2gsm" class="tab active" role="tab" aria-controls="panel-w2gsm" aria-selected="true">중량(g) → 평량(g/m²)</div>
-      <div id="tab-gsm2w" class="tab" role="tab" aria-controls="panel-gsm2w" aria-selected="false">평량(g/m²) → 중량(g)</div>
-      <div id="tab-monme2gsm" class="tab" role="tab" aria-controls="panel-monme2gsm" aria-selected="false">몬메(돈) → 평량(g/m²)</div>
-    </div>
+<div class="tabs" role="tablist" aria-label="계산 모드">
+  <div id="tab-w2gsm" class="tab active" role="tab" aria-controls="panel-w2gsm" aria-selected="true">
+    중량(g) → 평<br>량(g/m²)
+  </div>
+  <div id="tab-gsm2w" class="tab" role="tab" aria-controls="panel-gsm2w" aria-selected="false">
+    평량(g/m²) →<br>중량(g)
+  </div>
+  <div id="tab-monme2gsm" class="tab" role="tab" aria-controls="panel-monme2gsm" aria-selected="false">
+    몬메(돈) → 평<br>량(g/m²)
+  </div>
+</div>
 
     <!-- 탭 1: 중량 -> 평량 -->
     <section id="panel-w2gsm" class="card" role="tabpanel" aria-labelledby="tab-w2gsm">
@@ -293,4 +299,5 @@
   </script>
 </body>
 </html>
+
 
