--- a/index.html
+++ b/index.html
@@ -1,3 +1,55 @@
+<div class="tabs" role="tablist" aria-label="계산 모드">
+  <div id="tab-w2gsm" class="tab active" role="tab" aria-controls="panel-w2gsm" aria-selected="true">
+    중량(g) → 평<span class="mobile-break"><br></span>량(g/m²)
+  </div>
+  <div id="tab-gsm2w" class="tab" role="tab" aria-controls="panel-gsm2w" aria-selected="false">
+    평량(g/m²) →<span class="mobile-break"><br></span>중량(g)
+  </div>
+  <div id="tab-monme2gsm" class="tab" role="tab" aria-controls="panel-monme2gsm" aria-selected="false">
+    몬메(돈) → 평<span class="mobile-break"><br></span>량(g/m²)
+  </div>
+</div>
+CSS 추가
+css
+복사
+편집
+/* 기본(데스크톱)에서는 줄바꿈 숨김 */
+.mobile-break { display: none; }
+
+/* 모바일(480px 이하)에서만 줄바꿈 표시 */
+@media (max-width: 480px) {
+  .mobile-break { display: inline; }
+}
+💡 적용 방법
+
+HTML에서 기존 .tabs 안의 <div> 3개를 위 코드로 교체.
+
+CSS 맨 아래에 .mobile-break 스타일 추가.
+
+이렇게 하면 PC에선 한 줄, 모바일에선 보기 좋은 위치에서 자동으로 2줄로 바뀜.
+
+원하면 내가 네 전체 HTML 파일에 이 변경을 반영한 완성본도 만들어줄 수 있음.
+그걸로 바로 덮어쓰면 돼.
+바로 만들어줄까?
+
+
+
+
+
+
+
+
+나의 말:
+응
+
+
+ChatGPT의 말:
+좋아, 그러면 네 HTML 전체 코드에 모바일 전용 줄바꿈 기능을 적용해서 완성본으로 줄게.
+PC/태블릿에서는 한 줄, 모바일(480px 이하)에서는 지정한 위치에서 줄이 바뀌도록 만들었어.
+
+html
+복사
+편집
 <!doctype html>
 <html lang="ko">
 <head>
@@ -16,6 +68,12 @@
     .tabs { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 8px; margin: 12px 0; }
     .tab { padding: 10px 12px; text-align: center; border-radius: 12px; border: 1px solid #d9e0ee; cursor: pointer; background: #fff; }
     .tab.active { border-color: #2d6cdf; background: #eef2ff; font-weight: 700; }
+
+    /* 모바일 전용 줄바꿈 제어 */
+    .mobile-break { display: none; }
+    @media (max-width: 480px) {
+      .mobile-break { display: inline; }
+    }
 
     .card { background: #fff; border-radius: var(--radius); padding: 16px; box-shadow: 0 2px 12px rgba(0,0,0,.06); }
     .grid { display: grid; grid-template-columns: 1fr; gap: var(--gap); }
@@ -37,14 +95,12 @@
     footer { margin: 18px 0 8px; color: #6b7280; font-size: .85rem; text-align: center; }
     .badge { display: inline-block; padding: 4px 8px; background: #eef2ff; color: #334155; border-radius: 999px; font-size: .8rem; }
 
-    /* === 모바일(≤480px)에서 폼 압축: 결과가 버튼 바로 아래 보이도록 === */
+    /* 모바일(≤480px)에서 폼 압축: 결과가 버튼 바로 아래 보이도록 */
     @media (max-width: 480px) {
       body { padding: 12px; }
       .card { padding: 12px; }
       .tabs { gap: 6px; margin: 8px 0; }
       .tab { padding: 8px 10px; border-radius: 10px; }
-
-      /* 핵심: 가로/세로는 2열, 세 번째 입력(중량/평량/몬메)은 한 줄 전체 */
       .card .grid.grid-2 {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -53,10 +109,9 @@
       .card .grid.grid-2 > div:nth-child(3) {
         grid-column: 1 / -1;
       }
-
       label { margin-bottom: 4px; font-size: .88rem; }
       .row { gap: 8px; }
-      input, select { padding: 10px; font-size: 16px; } /* 모바일 자동줌 방지 */
+      input, select { padding: 10px; font-size: 16px; }
       .btn { padding: 10px 12px; font-size: 1rem; }
       .out { padding: 12px; border-radius: 12px; font-size: .95rem; }
       .muted { margin: 4px 0; font-size: .85rem; }
@@ -72,17 +127,17 @@
       <p class="sub">세 탭으로 분리. mm·cm만 지원, 항상 <b>1장 기준</b> 계산.</p>
     </header>
 
-<div class="tabs" role="tablist" aria-label="계산 모드">
-  <div id="tab-w2gsm" class="tab active" role="tab" aria-controls="panel-w2gsm" aria-selected="true">
-    중량(g) → <br>평량(g/m²)
-  </div>
-  <div id="tab-gsm2w" class="tab" role="tab" aria-controls="panel-gsm2w" aria-selected="false">
-    평량(g/m²) <br>→ 중량(g)
-  </div>
-  <div id="tab-monme2gsm" class="tab" role="tab" aria-controls="panel-monme2gsm" aria-selected="false">
-    몬메(돈) → <br>평량(g/m²)
-  </div>
-</div>
+    <div class="tabs" role="tablist" aria-label="계산 모드">
+      <div id="tab-w2gsm" class="tab active" role="tab" aria-controls="panel-w2gsm" aria-selected="true">
+        중량(g) <span class="mobile-break"><br></span>→ 평량(g/m²)
+      </div>
+      <div id="tab-gsm2w" class="tab" role="tab" aria-controls="panel-gsm2w" aria-selected="false">
+        평량(g/m²) <span class="mobile-break"><br></span>→중량(g)
+      </div>
+      <div id="tab-monme2gsm" class="tab" role="tab" aria-controls="panel-monme2gsm" aria-selected="false">
+        몬메(돈) <span class="mobile-break"><br></span>→ 평량(g/m²)
+      </div>
+    </div>
 
     <!-- 탭 1: 중량 -> 평량 -->
     <section id="panel-w2gsm" class="card" role="tabpanel" aria-labelledby="tab-w2gsm">
@@ -299,6 +354,7 @@
   </script>
 </body>
 </html>
+
 
 
 
