--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
     .tab.active { border-color: #2d6cdf; background: #eef2ff; font-weight: 700; }
 
     /* 모바일 전용 줄바꿈: PC는 한 줄, 모바일은 '→' 뒤에서 줄바꿈 */
-    .mobile-break { display: inline; } /* 기본(PC/태블릿): 한 줄 */
-    @media (max-width: 480px) {
-      .mobile-break { display: block; } /* 모바일: 줄바꿈 */
-    }
+    .mobile-break { display: inline; }
+    @media (max-width: 480px) { .mobile-break { display: block; } }
 
     .card { background: #fff; border-radius: var(--radius); padding: 16px; box-shadow: 0 2px 12px rgba(0,0,0,.06); }
     .grid { display: grid; grid-template-columns: 1fr; gap: var(--gap); }
@@ -43,21 +41,17 @@
     footer { margin: 18px 0 8px; color: #6b7280; font-size: .85rem; text-align: center; }
     .badge { display: inline-block; padding: 4px 8px; background: #eef2ff; color: #334155; border-radius: 999px; font-size: .8rem; }
 
-    /* 모바일(≤480px)에서 폼 압축: 결과가 버튼 바로 아래 보이도록 */
+    /* 모바일(≤480px) 폼 압축 */
     @media (max-width: 480px) {
       body { padding: 12px; }
       .card { padding: 12px; }
       .tabs { gap: 6px; margin: 8px 0; }
       .tab { padding: 8px 10px; border-radius: 10px; }
-      .card .grid.grid-2 {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-      }
+      .card .grid.grid-2 { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
       .card .grid.grid-2 > div:nth-child(3) { grid-column: 1 / -1; }
       label { margin-bottom: 4px; font-size: .88rem; }
       .row { gap: 8px; }
-      input, select { padding: 10px; font-size: 16px; } /* 모바일 자동줌 방지 */
+      input, select { padding: 10px; font-size: 16px; }
       .btn { padding: 10px 12px; font-size: 1rem; }
       .out { padding: 12px; border-radius: 12px; font-size: .95rem; }
       .muted { margin: 4px 0; font-size: .85rem; }
@@ -93,20 +87,14 @@
           <label for="w1">가로 길이</label>
           <div class="row">
             <input id="w1" type="number" inputmode="decimal" placeholder="예: 93" step="any" />
-            <select id="uw1">
-              <option value="mm">mm</option>
-              <option value="cm" selected>cm</option>
-            </select>
+            <select id="uw1"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
           </div>
         </div>
         <div>
           <label for="h1">세로 길이</label>
           <div class="row">
             <input id="h1" type="number" inputmode="decimal" placeholder="예: 63" step="any" />
-            <select id="uh1">
-              <option value="mm">mm</option>
-              <option value="cm" selected>cm</option>
-            </select>
+            <select id="uh1"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
           </div>
         </div>
         <div>
@@ -132,20 +120,14 @@
           <label for="w2">가로 길이</label>
           <div class="row">
             <input id="w2" type="number" inputmode="decimal" placeholder="예: 93" step="any" />
-            <select id="uw2">
-              <option value="mm">mm</option>
-              <option value="cm" selected>cm</option>
-            </select>
+            <select id="uw2"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
           </div>
         </div>
         <div>
           <label for="h2">세로 길이</label>
           <div class="row">
             <input id="h2" type="number" inputmode="decimal" placeholder="예: 63" step="any" />
-            <select id="uh2">
-              <option value="mm">mm</option>
-              <option value="cm" selected>cm</option>
-            </select>
+            <select id="uh2"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
           </div>
         </div>
         <div>
@@ -171,20 +153,14 @@
           <label for="w3">가로 길이</label>
           <div class="row">
             <input id="w3" type="number" inputmode="decimal" placeholder="예: 93" step="any" />
-            <select id="uw3">
-              <option value="mm">mm</option>
-              <option value="cm" selected>cm</option>
-            </select>
+            <select id="uw3"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
           </div>
         </div>
         <div>
           <label for="h3">세로 길이</label>
           <div class="row">
             <input id="h3" type="number" inputmode="decimal" placeholder="예: 63" step="any" />
-            <select id="uh3">
-              <option value="mm">mm</option>
-              <option value="cm" selected>cm</option>
-            </select>
+            <select id="uh3"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
           </div>
         </div>
         <div>
@@ -209,7 +185,6 @@
   </div>
 
   <script>
-    // 헬퍼
     const $ = (id) => document.getElementById(id);
     const fmt = (v, d=1) => (isFinite(v) ? Number(v).toFixed(d) : "-");
     function toMeters(value, unit){
@@ -218,7 +193,6 @@
       return unit === 'mm' ? v/1000 : unit === 'cm' ? v/100 : NaN;
     }
 
-    // 탭 전환(3개 통합)
     function switchTab(which){
       const ids = ['w2gsm','gsm2w','monme2gsm'];
       ids.forEach(id=>{
@@ -231,52 +205,47 @@
     $('tab-gsm2w').addEventListener('click', () => switchTab('gsm2w'));
     $('tab-monme2gsm').addEventListener('click', () => switchTab('monme2gsm'));
 
-    // 계산 1: 중량 -> 평량
     function calcGSM(){
       const w = toMeters($('w1').value, $('uw1').value);
       const h = toMeters($('h1').value, $('uh1').value);
       const m = Number($('m1').value);
       if(!isFinite(w) || !isFinite(h) || w<=0 || h<=0) { $('out1').innerHTML = '크기(가로/세로)와 단위를 올바르게 입력하세요.'; return; }
       if(!isFinite(m) || m<=0){ $('out1').innerHTML = '중량(g)을 입력하세요.'; return; }
-      const A = w*h; // m²
-      const gsm = m / A; // g/m²
+      const A = w*h;
+      const gsm = m / A;
       $('out1').innerHTML = `✅ 평량: <b>${fmt(gsm,1)} g/m²</b><br>• 면적: ${fmt(A,5)} m² (1장)<br>• 중량: ${fmt(m,1)} g`;
       if (window.innerWidth < 500) $('out1').scrollIntoView({block:'start', behavior:'smooth'});
     }
 
-    // 계산 2: 평량 -> 중량
     function calcMass(){
       const w = toMeters($('w2').value, $('uw2').value);
       const h = toMeters($('h2').value, $('uh2').value);
       const gsm = Number($('gsm2').value);
       if(!isFinite(w) || !isFinite(h) || w<=0 || h<=0) { $('out2').innerHTML = '크기(가로/세로)와 단위를 올바르게 입력하세요.'; return; }
       if(!isFinite(gsm) || gsm<=0){ $('out2').innerHTML = '평량(g/m²)을 입력하세요.'; return; }
-      const A = w*h; // m²
-      const mass = gsm * A; // g (1장 기준)
+      const A = w*h;
+      const mass = gsm * A;
       $('out2').innerHTML = `✅ 중량: <b>${fmt(mass,1)} g</b><br>• 면적: ${fmt(A,5)} m² (1장)<br>• 평량: ${fmt(gsm,1)} g/m²`;
       if (window.innerWidth < 500) $('out2').scrollIntoView({block:'start', behavior:'smooth'});
     }
 
-    // 계산 3: 몬메 -> 평량
     function calcMonme(){
       const w = toMeters($('w3').value, $('uw3').value);
       const h = toMeters($('h3').value, $('uh3').value);
       const monme = Number($('monme').value);
       if(!isFinite(w) || !isFinite(h) || w<=0 || h<=0) { $('out3').innerHTML = '크기(가로/세로)와 단위를 올바르게 입력하세요.'; return; }
       if(!isFinite(monme) || monme<=0){ $('out3').innerHTML = '몬메(돈) 값을 입력하세요.'; return; }
-      const m = monme * 3.75; // g
-      const A = w*h; // m²
-      const gsm = m / A; // g/m²
+      const m = monme * 3.75;
+      const A = w*h;
+      const gsm = m / A;
       $('out3').innerHTML = `✅ 평량: <b>${fmt(gsm,1)} g/m²</b><br>• 면적: ${fmt(A,5)} m² (1장)<br>• 중량: ${fmt(m,2)} g<br>• 몬메: ${fmt(monme,2)} 돈`;
       if (window.innerWidth < 500) $('out3').scrollIntoView({block:'start', behavior:'smooth'});
     }
 
-    // 버튼 바인딩
     $('btnGsm').addEventListener('click', calcGSM);
     $('btnMass').addEventListener('click', calcMass);
     $('btnMonme').addEventListener('click', calcMonme);
 
-    // 리셋
     $('btnReset1').addEventListener('click', () => {
       ['w1','h1','m1'].forEach(id => $(id).value='');
       $('out1').innerHTML='대기 중… 값을 입력하고 계산하세요.';
@@ -290,7 +259,6 @@
       $('out3').innerHTML='대기 중… 값을 입력하고 계산하세요.';
     });
 
-    // Enter 키는 현재 탭에 맞는 계산 실행
     document.addEventListener('keydown', (e) => {
       if(e.key !== 'Enter') return;
       if($('panel-w2gsm').style.display !== 'none') calcGSM();
