--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         중량(g) →<span class="mobile-break"> 평량(g/m²)</span>
       </div>
       <div id="tab-gsm2w" class="tab" role="tab" aria-controls="panel-gsm2w" aria-selected="false">
-        평량(g/m²) <span class="mobile-break">→중량(g)</span>
+        평량(g/m²) →<span class="mobile-break"> 중량(g)</span>
       </div>
       <div id="tab-monme2gsm" class="tab" role="tab" aria-controls="panel-monme2gsm" aria-selected="false">
         몬메(돈) →<span class="mobile-break"> 평량(g/m²)</span>
@@ -268,5 +268,3 @@
   </script>
 </body>
 </html>
-
-
