--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <style>
     :root { --gap: 14px; --radius: 16px; }
     * { box-sizing: border-box; }
+
     body {
       font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans KR", Arial, sans-serif;
       margin: 0; padding: 16px;
-      background: #0b1220; color: #111; line-height: 1.5;
+      background: #f6f7f9; color: #111; line-height: 1.5;
     }
     .wrap { width: 100%; max-width: 720px; margin: 0 auto; min-width: 0; }
     header { margin-bottom: 14px; }
@@ -18,7 +19,8 @@
     p.sub { margin: 0; color: #555; font-size: .95rem; }
 
     .tabs {
-      display: grid; grid-template-columns: repeat(3, minmax(0,1fr));
+      display: grid;
+      grid-template-columns: repeat(3, minmax(0,1fr));
       gap: 8px; margin: 12px 0; min-width: 0;
     }
     .tab {
@@ -64,7 +66,7 @@
     footer { margin: 18px 0 8px; color: #6b7280; font-size: .85rem; text-align: center; }
     .badge { display: inline-block; padding: 4px 8px; background: #eef2ff; color: #334155; border-radius: 999px; font-size: .8rem; }
 
-    /* 표 오버플로우 방지 */
+    /* === 추가: 테이블이 카드보다 넓어지지 않도록 === */
     .card table {
       display: block;
       width: 100%;
@@ -96,13 +98,173 @@
 </head>
 <body>
   <div class="wrap">
-    <!-- 여기에 기존 내용 (header, section, footer 등) 그대로 두시면 됩니다 -->
     <header>
       <div class="badge">한지 · 종이 계산</div>
       <h1>한지 계산기 (중량 ↔ 평량 ↔ 몬메)</h1>
       <p class="sub">세 탭으로 분리, 단위 없이 <b>숫자만 입력</b>하세요.</p>
     </header>
-    <!-- 이하 동일 -->
+
+    <div class="tabs" role="tablist" aria-label="계산 모드">
+      <div id="tab-w2gsm" class="tab active" role="tab" aria-controls="panel-w2gsm" aria-selected="true">
+        중량(g) →<span class="mobile-break"> 평량(g/m²)</span>
+      </div>
+      <div id="tab-gsm2w" class="tab" role="tab" aria-controls="panel-gsm2w" aria-selected="false">
+        평량(g/m²)<span class="mobile-break">→ 중량(g)</span>
+      </div>
+      <div id="tab-monme2gsm" class="tab" role="tab" aria-controls="panel-monme2gsm" aria-selected="false">
+        몬메(돈) →<span class="mobile-break"> 평량(g/m²)</span>
+      </div>
+    </div>
+
+    <!-- 탭 1: 중량 -> 평량 -->
+    <section id="panel-w2gsm" class="card" role="tabpanel" aria-labelledby="tab-w2gsm">
+      <h2 style="margin:0 0 8px">중량(g) → 평량(g/m²)</h2>
+      <div class="grid grid-2">
+        <div>
+          <label for="w1">가로 길이</label>
+          <div class="row">
+            <input id="w1" type="number" inputmode="decimal" placeholder="예: 93" step="any" />
+            <select id="uw1"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
+          </div>
+        </div>
+        <div>
+          <label for="h1">세로 길이</label>
+          <div class="row">
+            <input id="h1" type="number" inputmode="decimal" placeholder="예: 63" step="any" />
+            <select id="uh1"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
+          </div>
+        </div>
+        <div>
+          <label for="m1">중량 (g)</label>
+          <input id="m1" type="number" inputmode="decimal" placeholder="예: 18.0 (1장 중량)" step="any" />
+        </div>
+      </div>
+      <div class="grid" style="margin-top: var(--gap)">
+        <button id="btnGsm" class="btn">평량 계산</button>
+        <button id="btnReset1" class="btn ghost" type="button">초기화</button>
+      </div>
+      <p class="muted">단위: 1 m² = 10,000 cm²</p>
+      <p class="muted">본 계산기는 항상 <b>1장 기준</b>으로 결과를 표시합니다.</p>
+      <div class="hr"></div>
+      <div id="out1" class="out">대기 중… 값을 입력하고 계산하세요.</div>
+    </section>
+
+    <!-- 탭 2: 평량 -> 중량 -->
+    <section id="panel-gsm2w" class="card" role="tabpanel" aria-labelledby="tab-gsm2w" style="display:none">
+      <h2 style="margin:0 0 8px">평량(g/m²) → 중량(g)</h2>
+      <div class="grid grid-2">
+        <div>
+          <label for="w2">가로 길이</label>
+          <div class="row">
+            <input id="w2" type="number" inputmode="decimal" placeholder="예: 93" step="any" />
+            <select id="uw2"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
+          </div>
+        </div>
+        <div>
+          <label for="h2">세로 길이</label>
+          <div class="row">
+            <input id="h2" type="number" inputmode="decimal" placeholder="예: 63" step="any" />
+            <select id="uh2"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
+          </div>
+        </div>
+        <div>
+          <label for="gsm2">평량 (g/m²)</label>
+          <input id="gsm2" type="number" inputmode="decimal" placeholder="예: 30.0 (1장 평량)" step="any" />
+        </div>
+      </div>
+      <div class="grid" style="margin-top: var(--gap)">
+        <button id="btnMass" class="btn">중량 계산</button>
+        <button id="btnReset2" class="btn ghost" type="button">초기화</button>
+      </div>
+      <p class="muted">단위: 1 m² = 10,000 cm²</p>
+      <p class="muted">본 계산기는 항상 <b>1장 기준</b>으로 결과를 표시합니다.</p>
+      <div class="hr"></div>
+      <div id="out2" class="out">대기 중… 값을 입력하고 계산하세요.</div>
+    </section>
+
+    <!-- 탭 3: 몬메 -> 평량 -->
+    <section id="panel-monme2gsm" class="card" role="tabpanel" aria-labelledby="tab-monme2gsm" style="display:none">
+      <h2 style="margin:0 0 8px">몬메(돈) → 평량(g/m²)</h2>
+      <div class="grid grid-2">
+        <div>
+          <label for="w3">가로 길이</label>
+          <div class="row">
+            <input id="w3" type="number" inputmode="decimal" placeholder="예: 93" step="any" />
+            <select id="uw3"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
+          </div>
+        </div>
+        <div>
+          <label for="h3">세로 길이</label>
+          <div class="row">
+            <input id="h3" type="number" inputmode="decimal" placeholder="예: 63" step="any" />
+            <select id="uh3"><option value="mm">mm</option><option value="cm" selected>cm</option></select>
+          </div>
+        </div>
+        <div>
+          <label for="monme">몬메 (돈)</label>
+          <input id="monme" type="number" inputmode="decimal" placeholder="예: 5.0 (1장 몬메)" step="any" />
+        </div>
+      </div>
+      <div class="grid" style="margin-top: var(--gap)">
+        <button id="btnMonme" class="btn">평량 계산</button>
+        <button id="btnReset3" class="btn ghost" type="button">초기화</button>
+      </div>
+      <p class="muted">단위: 1 몬메(もんめ; 돈) = 3.75 g</p>
+      <p class="muted">단위: 1 m² = 10,000 cm²</p>
+      <p class="muted">본 계산기는 항상 <b>1장 기준</b>으로 결과를 표시합니다.</p>
+      <div class="hr"></div>
+      <div id="out3" class="out">대기 중… 값을 입력하고 계산하세요.</div>
+    </section>
+
+    <footer>
+      계산식: ① <code>평량(g/m²) = 중량(g) / 면적(m²)</code> ② <code>중량(g) = 평량(g/m²) × 면적(m²)</code>
+    </footer>
   </div>
-</body>
-</html>
+
+  <script>
+    const $ = (id) => document.getElementById(id);
+    const fmt = (v, d=1) => (isFinite(v) ? Number(v).toFixed(d) : "-");
+    function toMeters(value, unit){
+      const v = Number(value);
+      if (!isFinite(v) || v <= 0) return NaN;
+      return unit === 'mm' ? v/1000 : unit === 'cm' ? v/100 : NaN;
+    }
+
+    function switchTab(which){
+      const ids = ['w2gsm','gsm2w','monme2gsm'];
+      ids.forEach(id=>{
+        $('tab-'+id).classList.toggle('active', id===which);
+        $('tab-'+id).setAttribute('aria-selected', id===which ? 'true' : 'false');
+        $('panel-'+id).style.display = (id===which) ? 'block' : 'none';
+      });
+    }
+    $('tab-w2gsm').addEventListener('click', () => switchTab('w2gsm'));
+    $('tab-gsm2w').addEventListener('click', () => switchTab('gsm2w'));
+    $('tab-monme2gsm').addEventListener('click', () => switchTab('monme2gsm'));
+
+    function calcGSM(){
+      const w = toMeters($('w1').value, $('uw1').value);
+      const h = toMeters($('h1').value, $('uh1').value);
+      const m = Number($('m1').value);
+      if(!isFinite(w) || !isFinite(h) || w<=0 || h<=0) { $('out1').innerHTML = '크기(가로/세로)와 단위를 올바르게 입력하세요.'; return; }
+      if(!isFinite(m) || m<=0){ $('out1').innerHTML = '중량(g)을 입력하세요.'; return; }
+      const A = w*h;
+      const gsm = m / A;
+      $('out1').innerHTML = `✅ 평량: <b>${fmt(gsm,1)} g/m²</b><br>• 면적: ${fmt(A,5)} m² (1장)<br>• 중량: ${fmt(m,1)} g`;
+      if (window.innerWidth < 500) $('out1').scrollIntoView({block:'start', behavior:'smooth'});
+    }
+
+    function calcMass(){
+      const w = toMeters($('w2').value, $('uw2').value);
+      const h = toMeters($('h2').value, $('uh2').value);
+      const gsm = Number($('gsm2').value);
+      if(!isFinite(w) || !isFinite(h) || w<=0 || h<=0) { $('out2').innerHTML = '크기(가로/세로)와 단위를 올바르게 입력하세요.'; return; }
+      if(!isFinite(gsm) || gsm<=0){ $('out2').innerHTML = '평량(g/m²)을 입력하세요.'; return; }
+      const A = w*h;
+      const mass = gsm * A;
+      $('out2').innerHTML = `✅ 중량: <b>${fmt(mass,1)} g</b><br>• 면적: ${fmt(A,5)} m² (1장)<br>• 평량: ${fmt(gsm,1)} g/m²`;
+      if (window.innerWidth < 500) $('out2').scrollIntoView({block:'start', behavior:'smooth'});
+    }
+
+    function calcMonme(){
+      const w = toMeters($('w3').value, $('uw3').value);
