--- a/index.html
+++ b/index.html
@@ -179,9 +179,13 @@
       <div id="out3" class="out">대기 중… 값을 입력하고 계산하세요.</div>
     </section>
 
-    <footer>
-      계산식: ① <code>평량(g/m²) = 중량(g) / 면적(m²)</code> ② <code>중량(g) = 평량(g/m²) × 면적(m²)</code>
-    </footer>
+<footer>
+  계산식: ① <code>평량(g/m²) = 중량(g) / 면적(m²)</code>
+  ② <code>중량(g) = 평량(g/m²) × 면적(m²)</code>
+  <div style="margin-top:6px;">
+    ⓒ 국립문화유산연구원 복원기술연구실 한지팀
+  </div>
+</footer>
   </div>
 
   <script>
