--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   계산식: ① <code>평량(g/m²) = 중량(g) / 면적(m²)</code>
   ② <code>중량(g) = 평량(g/m²) × 면적(m²)</code>
   <div style="margin-top:6px;">
-    ⓒ 국립문화유산연구원 복원기술연구실 한지팀
+    ⓒ 20205 국립문화유산연구원 복원기술연구실 한지팀 (장경주, 정소윤, 정선화*)
   </div>
 </footer>
   </div>
@@ -272,6 +272,7 @@
   </script>
 </body>
 </html>
+
 
 
 
